# onuw-agent

./: .gitignore  README.md  pyproject.toml
configs/: sample_deepseek.yaml  sample_game.yaml  sample_local.yaml  sample_minimax.yaml
src/onuw/: cli.py  config.py  memory.py  state.py  types.py
src/onuw/agents/: __init__.py  base.py  llm_agent.py  scripted_agent.py
src/onuw/engine/: day.py  engine.py  night.py  resolve.py  setup.py  vote.py
src/onuw/events/: bus.py  console.py  json_log.py  observer.py
src/onuw/llm/: __init__.py  client.py
src/onuw/prompts/: day.py  night.py  rules.py  system.py  vote.py
src/onuw/utils/: ids.py  json_parse.py
tests/: test_end_to_end.py  test_events.py  test_json_parse.py  test_llm_agent.py  test_memory_and_prompts.py  test_night_actions.py  test_resolve.py  test_setup.py  test_voting.py
