[project]
name = "onuw"
version = "0.1.0"
description = "Multi-LLM-agent framework for One Night Ultimate Werewolf."
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.50",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "rich>=13.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/onuw"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
